# ProjektBulanci

./: CMakeLists.txt  Projekt  main-copy.c  main.c  massif.out.22574  massif.out.23902  matchHistory  movementTest.c  poznamky.md
configs/: mapObjects.json  mapObjects.txt
src/: SavingManager.c  SavingManager.h  WorkingWIthFiles.c  WorkingWithFiles.h  ai.c  ai.h  animace.c  animace.h  basicStructs.c  basicStructs.h  collisions.c  collisions.h  gamerule.c  gamerule.h  keybinds.c  keybinds.h  liveInput.c  liveInput.h  object.c  object.h  player.c  player.h  render.c  render.h  ui.c  ui.h  weapons.c  weapons.h  world.c  world.h
